--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>1.2.3.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
